--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="top-section">
 
       <div class="actual-top-content">
-        <h1>TV Series episodes</h1>
+        <h1>TV Series</h1>
         <div class="intro-buttons">
           <input type="text" id="searchInput" class="input-search" placeholder="Enter series name">
           <button id="fetchButton" class="our-btn utility-mr">Search for episodes</button>
